feat(VendigoTest): Implement extraction of css

--- a/Vendigo/Test/src/views/index.html
+++ b/Vendigo/Test/src/views/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Book Shop</title>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css"></link>
+    <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
     <div id="root"></div>
